<resources>
  <string name="app_name">Echelon</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_search">Search</string>
  <string name="action_group_leave">Leave Group</string>
  <string name="action_settings">Settings</string>
  <string name="drawer_open">open</string>
  <string name="drawer_close">close</string>
  <string name="title_activity_main_activity2">MainActivity2Activity</string>

  <string name="title_section1">Home</string>
  <string name="title_section2">Group</string>
  <string name="title_section3">Settings</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_example">Example action</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="list_id" />
  <string name="owner_id" />
  <string name="get_url" />
  <string name="what" />
  <string name="searchQuery" />
  <string name="userId" />
  <string name="playlistId" />

  <string name="album_cover_image">Album Cover Image</string>
  <string name="playlist_cover_image">Playlist Cover Image</string>
  <string name="play_pause_button">Play/Pause Button</string>
  <string name="skip_track_button">Skip Track Button</string>
  <string name="echelon_logo_image">Echelon Logo Image</string>
  <string name="user_profile_image">User Profile Image</string>
  <string name="sidenav_header_image">Sidenav Header Image</string>
  <string name="vote_song_up_image">Vote Song Up Image Button</string>
  <string name="vote_song_down_image">Vote Song Down Image Button</string>
  <string name="more_menu">Context menu</string>

  <string name="invitation_title">Echelon Group Invite</string>
  <string name="invitation_message">Let\'s rock out to some music on Echelon!</string>
  <string name="invitation_deep_link">https://echelonapp.io</string>
  <string name="invitation_custom_image">image</string>
  <string name="invitation_cta">Join Group</string>

  <string name="create_group">Create Group</string>
  <string name="create_group_long">Create Group</string>
  <string name="create_group_disabled">Create Group</string>

  <string name="join_group">Join Group</string>
  <string name="join_group_long">Join Group</string>
  <string name="join_group_disabled">Join Group</string>
  <string name="action_group_settings">Group Settings</string>
  <string name="action_group_participants">Participants</string>

</resources>
